add some tests and filter endpoint