@@ -1,17 +1,15 @@
 package pl.edu.agh.utp.service;
 
 import io.vavr.control.Either;
-
 import java.util.*;
 import java.util.stream.Collectors;
-
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pl.edu.agh.utp.model.nodes.Group;
 import pl.edu.agh.utp.model.nodes.Transaction;
 import pl.edu.agh.utp.model.nodes.User;
-import pl.edu.agh.utp.records.Reimbursment;
+import pl.edu.agh.utp.records.Reimbursement;
 import pl.edu.agh.utp.records.UserBalance;
 import pl.edu.agh.utp.records.request.GroupRequest;
 import pl.edu.agh.utp.records.request.TransactionRequest;
@@ -88,35 +86,52 @@ public class GroupService {
     return groupRepository.findAllBalancesByGroupId(groupId);
   }
 
-  public List<Reimbursment> getReimbursmentsByGroupId(UUID groupId) {
+  @Transactional
+  public List<Reimbursement> getReimbursementsByGroupId(UUID groupId) {
     List<UserBalance> balances = getAllBalancesByGroupId(groupId);
-    return calculateReimbursments(balances);
+    return calculateReimbursements(balances);
   }
 
-  public static List<Reimbursment> calculateReimbursments(List<UserBalance> balances) {
-    //split for two lists with negative and positive balances
-    List <UserBalance> negativeBalances =balances.stream().filter(balance -> balance.balance() <= 0).sorted(Comparator.comparing(UserBalance::balance)).toList();
-    List <UserBalance> positiveBalances=  balances.stream().filter(balance -> balance.balance() > 0).sorted(Comparator.comparing(UserBalance::balance)).collect(Collectors.toList());
-    List<Reimbursment> reimbursments = new ArrayList<>();
+  public static List<Reimbursement> calculateReimbursements(List<UserBalance> balances) {
+    // split for two lists with negative and positive balances
+    List<UserBalance> negativeBalances =
+        balances.stream()
+            .filter(balance -> balance.balance() <= 0)
+            .sorted(Comparator.comparing(UserBalance::balance))
+            .toList();
+    List<UserBalance> positiveBalances =
+        balances.stream()
+            .filter(balance -> balance.balance() > 0)
+            .sorted(Comparator.comparing(UserBalance::balance))
+            .collect(Collectors.toList());
+    List<Reimbursement> reimbursements = new ArrayList<>();
 
     for (UserBalance negativeBalance : negativeBalances) {
       double currentNegativeBalanceValue = negativeBalance.balance();
-        while(currentNegativeBalanceValue < 0) {
-          UserBalance positiveBalance = positiveBalances.get(0);
-          double positiveBalanceValue = positiveBalance.balance();
-          double debtValue = positiveBalanceValue + currentNegativeBalanceValue;
-          if (debtValue <= 0) {
-            reimbursments.add(new Reimbursment(positiveBalance.user(), negativeBalance.user(), positiveBalanceValue));
-            positiveBalances.remove(0);
-            currentNegativeBalanceValue = debtValue;
-          } else {
-            reimbursments.add(new Reimbursment(positiveBalance.user(), negativeBalance.user(), -currentNegativeBalanceValue));
-            positiveBalances.set(0, new UserBalance(positiveBalance.user(), debtValue));
-            currentNegativeBalanceValue = 0;
-          }
+      while (currentNegativeBalanceValue < 0) {
+        UserBalance positiveBalance = positiveBalances.get(0);
+        double positiveBalanceValue = positiveBalance.balance();
+        double debtValue = positiveBalanceValue + currentNegativeBalanceValue;
+        if (debtValue <= 0) {
+          reimbursements.add(
+              new Reimbursement(
+                  positiveBalance.user(), negativeBalance.user(), positiveBalanceValue));
+          positiveBalances.remove(0);
+          currentNegativeBalanceValue = debtValue;
+        } else {
+          reimbursements.add(
+              new Reimbursement(
+                  positiveBalance.user(), negativeBalance.user(), -currentNegativeBalanceValue));
+          positiveBalances.set(0, new UserBalance(positiveBalance.user(), debtValue));
+          currentNegativeBalanceValue = 0;
         }
+      }
     }
-    return reimbursments;
+    return reimbursements;
+  }
 
+  // FIXME: make this better
+  public Optional<Group> findGroupById(UUID groupId) {
+    return groupRepository.findById(groupId);
   }
 }
